<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalitiesFactorsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personality_formation_factors"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/home_tv_app_formation_factors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_5sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heredity_factor"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/factor_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/environment"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/factor_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_background"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/factor_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intelligence"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/factor_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/culture"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/factor_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_body"
            android:layout_marginStart="@dimen/_30sdp"

            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/factor_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/factor_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"/>

    </LinearLayout>



</ScrollView>